--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="detel">
             <h1>I,M SANJAY <span>PR</span></h1>
             <p>FULLSTACK-DEVELPOER</p>
-            <a href="#">DOWNLOAD CV</a>
+            <a href="./RESUME SANJAY.docx">DOWNLOAD CV</a>
      
 
     </div>
